[package]
name = "rustbox"
version = "0.6.2"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]
description = "A Rust implementation of the Termbox library."
repository = "https://github.com/gchp/rustbox"
homepage = "https://github.com/gchp/rustbox"
readme = "README.md"
license = "MIT"
keywords = ["termbox", "terminal", "gui",]
exclude = ["examples/*"]

[lib]
name = "rustbox"

[dependencies]
bitflags = "0.2.1"
num = "*"
time = "*"

[target.i686-unknown-linux-gnu.dependencies]
termbox-sys = "0.2.7"
gag = "0.1.6"

[target.x86_64-unknown-linux-gnu.dependencies]
termbox-sys = "0.2.7"
gag = "0.1.6"

[target.x86_64-apple-darwin.dependencies]
termbox-sys = "0.2.7"
gag = "0.1.6"

[target.i686-pc-windows-gnu.dependencies]
winapi = "*"
kernel32-sys = "*"

[target.x86_64-pc-windows-gnu.dependencies]
winapi = "*"
kernel32-sys = "*"
