[package]
name = "rustbox"
version = "0.11.0"
authors = ["Greg Chapple <gregchapple1@gmail.com>"]
description = "A rust implementation of the termbox library"
repository = "https://github.com/gchp/rustbox"
homepage = "https://github.com/gchp/rustbox"
readme = "README.md"
license = "MIT"
keywords = [
    "termbox",
    "terminal",
    "gui",
]
exclude = [
    "examples/*"
]

[lib]
name = "rustbox"

[dependencies]
bitflags = "0.2.1"
termbox-sys = "0.2.9"
gag = "0.1.6"
num-traits = "0.1.13"
